# proteus

./: README.md
.github/workflows/: kotlin-compiler.yml  publish.yml
examples/: break-and-continue.psl  casting.psl  constants.psl  factorial.psl  fibonacci.psl  hello-world.psl  not-terminating.psl  pointers.psl  sum.psl  sum_recursive.psl  type_operators.psl
examples/circular_import/: main.psl  sum.psl
examples/gcd/: gcd_iterative_1.psl  recursive.psl
examples/imports/: main.psl  multiply.psl  sum.psl
examples/memory/: mem1.psl
examples/optimizations/: const_evaluation.psl
examples/shadowing/: main.psl
examples/structs/: structs.psl  structs2.psl  structs3.psl  structs4.psl
proteus/: build.gradle.kts  settings.gradle.kts
proteus-compiler/: Cargo.toml
proteus-compiler-kotlin/: .gitignore  build.gradle.kts  example.psl  hello-world.psl  settings.gradle.kts
proteus-compiler-kotlin/gcd/: iterative.pslb  recursive.pslb
proteus-compiler-kotlin/src/main/antlr/: ProteusLexer.g4  (+1 more)
proteus-compiler/src/: lexer.rs  main.rs  parser.rs
proteus-core/: install.sh  math.psl
proteus-language-server/: build.gradle.kts  settings.gradle.kts
proteus-standard-library/: core.psl  install.sh  io.psl  math.psl  mem.psl
proteus-vm/: Cargo.toml  README.md
proteus-vm/src/: main.rs
proteus-vm/src/evaluator/: mod.rs
proteus-vm/src/ffi/: mod.rs
proteus-vm/src/instructions/: instruction.rs  mod.rs
proteus-vm/src/loading/: mod.rs
proteus-vm/src/memory/: heap.rs  mod.rs
proteus-vm/src/preprocessor/: mod.rs  symbol_table.rs
proteus-vm/src/utils/: mod.rs
(+250 files in other folders)
