[package]
name = "proteus-vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
enum_index = "0.2.0"
enum_index_derive = "0.2.0"
strum = "0.24.1"
strum_macros = "0.24.3"
